--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,20 +17,81 @@ ul {
 }
 h1, p {
   text-align: center;
-
-  color: rgb(255, 0, 0);
-}
-
-h2{
-  text-align: center;
-}
-
-h3{
-  text-align: center;
+  color: yellow;
 }
 
 #content {
   overflow: auto;
+}
+#nav, #feature, #footer {
+  margin: 1% 0%;
+}
+
+#feature {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  font-size: 25px;
+
+}
+
+.column1, .column2, .column3 {
+  width: 31.3%;
+  float: left;
+}
+
+.column1 {
+  float: left;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+
+
+.column2 {
+  margin: 0% 3%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.column3 {
+  float: right;
+  margin: 0%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.column4, .column5, .column6 {
+  width: 31.3%;
+  float: left;
+}
+
+.column4 {
+  float: left;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.column5 {
+  margin: 0% 3%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
+.column6 {
+  float: right;
+  margin: 0%;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
 }
 
 li {
@@ -54,7 +115,7 @@ a:link {
 }
 
 a:visited {
-  color: rgb(246, 255, 192);
+  color: rgb(255, 192, 192);
   background-color: transparent;
   text-decoration: none;
 }
@@ -66,7 +127,7 @@ a:hover {
 }
 
 a:active {
-  color: rgb(0, 17, 255);
+  color: yellow;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -125,129 +186,128 @@ li.active a {
   color: #333;
 }
 
-.server1{
-  display: block;
-  background: rgb(12, 139, 189);
-}
-
-.server2{
-  display: block;
-  background: rgb(12, 139, 189);
-}
-
-.server3{
-  display: block;
-  background: rgb(12, 139, 189);
+#nav, #feature2, #footer {
+  margin: 1% 0%;
 }
 
 
-.server4, .server5, .server6 {
-  width: 33%;
-  float: left;
-  display: block;
-  background: gray;
+#feature2, .article {
+  background-color: #efefef;
+  height: 25em;
+  margin-bottom: 1em;
 }
 
-footer{
-  float: left;
-}
-
-.mainnav{
-  display: block;
-  background: rgb(255, 0, 0);
-}
-
-small {
-  float: right
-}
-
-
-/*Iphone XS*/
-@media screen and 
-(max-width: 896px) {
-  h1, p {
-    text-align: center;
-    color: rgb(38, 0, 255);
-  }
-
-  #server, li {
-    font-size: 100%;
-  
-  }
-
-  #server, h2 {
-    font-size: 150%;
-  
-  }
-
-  #server, h3 {
-    font-size: 120%;
-  
-  }
-
-  #server, img {
-  width: 100%;
-  }
+#feature2 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  font-size: 25px;
 
 }
 
-/*Laptop*/
-@media screen and 
-(min-width: 1200px) and
-(max-width: 1600px) {
-  h1, p {
-    text-align: center;
-    color: rgb(234, 0, 255);
-  }
+#nav, #feature3, #footer {
+  margin: 1% 0%;
+}
 
-  #server, li {
-    font-size: 150%;
-  
-  }
 
-  #server, h2 {
-    font-size: 160%;
-  
-  }
+#feature3, .article {
+  background-color: #efefef;
+  height: 20em;
+  margin-bottom: 1em;
+}
 
-  #server, h3 {
-    font-size: 130%;
-  
-  }
-
-  #server, img {
-    width: 75%;
-    }
+#feature3 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  font-size: 25px;
 
 }
 
-/*IPAD 12.9 Pro*/
-@media screen and 
-(min-width: 1024px) and
-(max-width: 1366px) {
-  h1, p {
-    text-align: center;
-    color: rgb(255, 123, 0);
-  }
+#nav, #feature4, #footer {
+  margin: 1% 0%;
+}
 
-  #server, li {
-    font-size: 140%;
-  
-  }
 
-  #server, h2 {
-    font-size: 150%;
-  
-  }
+#feature4, .article {
+  background-color: #efefef;
+  height: 20em;
+  margin-bottom: 1em;
+}
 
-  #server, h3 {
-    font-size: 120%;
-  
-  }
-
-  #server, img {
-  width: 100%;
-  }
+#feature4 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  font-size: 25px;
 
 }
 
+#nav, #feature5, #footer {
+  margin: 1% 0%;
+}
+
+
+#feature5, .article {
+  background-color: #efefef;
+  height: 20em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+#feature5 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  font-size: 25px;
+
+}
+
+#feature5, p {
+text-align: center;
+
+}
+
+#nav, #feature6, #footer {
+  margin: 1% 0%;
+}
+
+
+#feature6, .article {
+  background-color: #efefef;
+  height: 20em;
+  margin-bottom: 1em;
+}
+
+#feature6 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  font-size: 25px;
+
+}
+
+#nav, #feature7, #footer {
+  margin: 1% 0%;
+}
+
+
+#feature7, .article {
+  background-color: #efefef;
+  height: 20em;
+  margin-bottom: 1em;
+}
+
+#feature7 {
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
+  font-size: 25px;
+
+}
