--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,7 @@ h1, p {
 }
 
 #feature {
-  background-image: url("");
+  background-image: url("../images/server4.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -43,7 +43,7 @@ h1, p {
 
 .column1 {
   float: left;
-  background-image: url("");
+  background-image: url("../images/servers3.png");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
@@ -52,7 +52,7 @@ h1, p {
 
 .column2 {
   margin: 0% 3%;
-  background-image: url("");
+  background-image: url("../images/servers2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -60,7 +60,7 @@ h1, p {
 .column3 {
   float: right;
   margin: 0%;
-  background-image: url("");
+  background-image: url("../images/servers1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -73,14 +73,14 @@ h1, p {
 
 .column4 {
   float: left;
-  background-image: url("");
+  background-image: url("../images/servers5.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 .column5 {
   margin: 0% 3%;
-  background-image: url("");
+  background-image: url("../images/servers6.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
@@ -88,7 +88,7 @@ h1, p {
 .column6 {
   float: right;
   margin: 0%;
-  background-image: url("");
+  background-image: url("../images/servers7.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
@@ -135,9 +135,10 @@ a:active {
 .overlay {
   background-color: rgb(0, 0, 0);
   position: absolute;
-  width: 536px;
+  width: 28.1%;
   height: 50px;
   overflow: hidden;
+  text-align: center;
 }
 
 .overlay:hover {
