--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -136,7 +136,7 @@ a:active {
   background-color: rgb(0, 0, 0);
   position: absolute;
   width: 28.1%;
-  height: 50px;
+  height: 48px;
   overflow: hidden;
   text-align: center;
 }
@@ -345,6 +345,10 @@ text-align: center;
   #feature {
     background-image: url("../images/server4s.png");  
   }
+
+  a:link {
+    font-size: 99%;
+  }
 }
 
 /*Laptop*/
@@ -355,6 +359,31 @@ text-align: center;
     text-align: center;
     color: rgb(234, 0, 255);
   }
+
+  .column1 {
+    background-image: url("../images/servers3m.png");
+  }
+
+  .column2 {
+    background-image: url("../images/servers2m.jpg");
+  }
+  .column3 {
+    background-image: url("../images/servers1m.jpg");
+  }
+
+  .column4 {
+    background-image: url("../images/servers5m.jpg");
+  }
+  .column5 {
+    background-image: url("../images/servers6m.jpg");
+  }
+  .column6 {
+    background-image: url("../images/servers7m.jpg");
+  }
+
+  #feature {
+    background-image: url("../images/server4m.png");  
+  }
 }
 
 /*IPAD 12.9 Pro*/
@@ -364,5 +393,29 @@ text-align: center;
   h1, p {
     text-align: center;
     color: rgb(255, 123, 0);
+  }
+  .column1 {
+    background-image: url("../images/servers3m2.png");
+  }
+
+  .column2 {
+    background-image: url("../images/servers2m2.jpg");
+  }
+  .column3 {
+    background-image: url("../images/servers1m2.jpg");
+  }
+
+  .column4 {
+    background-image: url("../images/servers5m2.jpg");
+  }
+  .column5 {
+    background-image: url("../images/servers6m2.jpg");
+  }
+  .column6 {
+    background-image: url("../images/servers7m2.jpg");
+  }
+
+  #feature {
+    background-image: url("../images/server4m2.png");  
   }
 }
